php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46546 Segmentation fault when using declare statement with non-string value
Submitted: 2008-11-11 16:10 UTC Modified: 2008-11-11 16:18 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.3CVS-2008-11-11 (CVS) OS:
Private report: No CVE-ID: None
 [2008-11-11 16:10 UTC] felipe@php.net
Description:
------------
See below.

Reproduce code:
---------------
declare(encoding = 1);


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-11-11 16:18 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 21:00:01 2026 UTC