- Fixed bug #46546 (Segmentation fault when using declare statement with non-string value) # This issue only happens in this branch

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@268822 c90b9560-bf6c-de11-be94-00142212c4b1